lib/core/ffi/external-direct-optimization/c_code_alloc_setup.h

/** Take in a cost_matrices_2d, the struct for which has already allocated. Internal arrays are allocated
 *  in call to cm_alloc_seet_costs_2d.
 *
 *  Nota bene:
 *  No longer setting max, as algorithm to do so is unclear: see note below.
 *  Not sure which of two loops to set prepend and tail arrays is correct.
 */
void setUp2dCostMtx( cost_matrices_2d_t *retMtx
                   , unsigned int       *tcm
                   , size_t              alphSize
                   , unsigned int        gap_open
                   );
/** Nearly identical to setUp2dCostMtx. Code duplication necessary in order to have two different return types.
 *  I attempted to do with with a return of void *, but was having trouble with allocation, and was forced to move
 *  it outside this fn.
 */
void setUp3dCostMtx( cost_matrices_3d_t *retMtx
                   , unsigned int       *tcm
                   , size_t              alphSize
                   , unsigned int        gap_open
                   );